fix(selection-page): fix the scroll bar always visible

--- a/app/static/css/guesser_selection.css
+++ b/app/static/css/guesser_selection.css
@@ -144,6 +144,20 @@
   overflow-x: hidden;
 }
 
+.element .frame-3::-webkit-scrollbar {
+  width: 15px;
+}
+
+.element .frame-3::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+.element .frame-3::-webkit-scrollbar-thumb:hover {
+  background: #555;
+
+}
+
 .element .feed {
   display: flex;
   flex-direction: column;
